--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ svm/*
 !svm/python/*.py
 
 tex/*
-!tex/proposal-pt/*/*.pdf
-!tex/proposal-pt/*/*.tex
-!tex/proposal-pt/*/*.bib
+!tex/proposal-pt/**.pdf
+!tex/proposal-pt/**.tex
+!tex/proposal-pt/**.bib
