pipeline: massive file removals
Former-commit-id: ef7a835bdfb22debb534e3cd321b2632e2992439

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.old.* # matches previous refactored files
 /.old   # matches root directory
 /srlconll-1.1
-datasets/embeddings/*
+datasets/txts/embeddings/*
 *.pyc
 *__pycache__
 propbankbr/*.txt
