binaries: added new language models
Former-commit-id: 1f1be00d5aa51a7600fd682adef46c26f0a67ac4

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 propbankbr/*.txt
 propbankbr/*.conll
 *events.out.tfevents.*
-tex/*
-!tex/*.pdf
-!tex/*.tex
-!tex/*.bib
+# large binary files
+*db_pt_LEMMA_fasttext_s50.pickle
+*db_pt_LEMMA_wang2vec_s50.pickle
+*db_pt_LEMMA_word2vec_s50.pickle
 
 # Remove saved parameters
 *graph_params-*
