--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # PEARL 
 /srlconll-1.1
+
 # Ignore pickles
 *.pickle
 
@@ -17,7 +18,7 @@
 *graph_params-*
 *events.out.tfevents.*
 
-# Compiled files
+# Binaries
 *.pyc
 *.so.3
 *.o
