propbank_encoder: define added

--- a/datasets/schemas/gs.yaml
+++ b/datasets/schemas/gs.yaml
@@ -15,13 +15,75 @@ ARG:
   type: choice
 CTREE:
   category: feature
-  domain: !!set {'>A': null, '>N': null, '>P': null, A<: null, A<ARG: null, ACC: null,
-    ACC-PASS: null, ADVL: null, APP: null, AUX: null, AUX<: null, CJT: null, CMD: null,
-    CO: null, COM: null, DAT: null, EXC: null, FOC: null, H: null, KOMP<: null, MV: null,
-    N<: null, N<ARG: null, N<ARGO: null, N<ARGS: null, N<PRED: null, NUM<: null, OA: null,
-    OC: null, P: null, P<: null, PASS: null, PCJT: null, PIV: null, PRED: null, PRT-AUX: null,
-    PU: null, QUE: null, S<: null, SA: null, SC: null, STA: null, SUB: null, SUBJ: null,
-    TOP: null, UTT: null, VOC: null, X: null, anteontem: null}
+  domain: !!set {(-ADJP(ACL*: null, (-ADVP(ACL*: null, (-ADVP(FCL*: null, (-CU(FCL(VP*): null,
+    (-CU(NP*: null, (-FCL(-PP(-CU(ICL(VP*): null, (-FCL(FCL*: null, (-FCL(NP*: null,
+    (-FCL(VP*): null, (-FCL*: null, (-ICL(-VP*: null, (-ICL(ICL(VP*): null, (-NP(-ADJP*: null,
+    (-NP(-FCL(-PP(-NP(-FCL(VP*): null, (-NP(-ICL(-VP*): null, (-NP(-PP*: null, (-NP(FCL(NP*): null,
+    (-NP(FCL*: null, (-NP(ICL(VP*): null, (-NP(NP*: null, (-NP(PP*: null, (-NP(VP*): null,
+    (-NP*: null, (-NP*)))): null, (-NP*))))))))): null, (-PP(-NP*: null, (-PP(ICL(VP*): null,
+    (-PP(NP*: null, (-PP(NP*): null, (-PP(PP*: null, (-PP*: null, (-VP(CU(X*): null,
+    (-VP*: null, (-VP*): null, (-VP*)): null, (-VP*)))): null, (-VP*)))))): null,
+    (ACL(ADVP*: null, (ACL(ADVP*): null, (ACL(FCL-(ACL(ADVP*): null, (ACL(NP*: null,
+    (ACL(NP*): null, (ACL(NP*))))))): null, (ACL(PP*: null, (ACL*: null, (ACL*)): null,
+    (ADJP(ADJP*: null, (ADJP(ADVP*: null, (ADJP(NP*: null, (ADJP(X(PP*: null, (ADJP*: null,
+    (ADJP*): null, (ADJP*)): null, (ADJP*))): null, (ADJP*)))): null, (ADJP*))))): null,
+    (ADJP*)))))): null, (ADJP*))))))): null, (ADJP*)))))))): null, (ADJP*))))))))): null,
+    (ADJP*)))))))))): null, (ADJP*))))))))))): null, (ADJP*)))))))))))): null, (ADJP*))))))))))))): null,
+    (ADJP*)))))))))))))): null, (ADJP*)))))))))))))))): null, (ADJP*))))))))))))))))): null,
+    (ADJP*)))))))))))))))))): null, (ADJP-*: null, (ADVP(ADVP*: null, (ADVP(NP*: null,
+    (ADVP(PP*: null, (ADVP*: null, (ADVP*): null, (ADVP*)): null, (ADVP*))): null,
+    (ADVP*)))): null, (ADVP*))))): null, (ADVP*)))))): null, (ADVP*))))))): null,
+    (ADVP*))))))))): null, (ADVP-*: null, (ADVP-*): null, (CU(ACL(ADVP*: null, (CU(ACL(ADVP*): null,
+    (CU(ACL*: null, (CU(ADJP(ADVP*: null, (CU(ADJP*: null, (CU(ADJP*): null, (CU(ADVP*: null,
+    (CU(ADVP*): null, (CU(CU(FCL(NP*: null, (CU(CU(FCL(VP*): null, (CU(CU(NP*: null,
+    (CU(FCL(ACL(ADVP*): null, (CU(FCL(ADVP*: null, (CU(FCL(ADVP*): null, (CU(FCL(CU(NP*: null,
+    (CU(FCL(CU(NP*): null, (CU(FCL(FCL(ADVP*): null, (CU(FCL(FCL(NP*): null, (CU(FCL(FCL*: null,
+    (CU(FCL(ICL(VP*): null, (CU(FCL(NP(CU(NP*): null, (CU(FCL(NP*: null, (CU(FCL(NP*): null,
+    (CU(FCL(PP*: null, (CU(FCL(VP*: null, (CU(FCL(VP*): null, (CU(FCL(VP*)): null,
+    (CU(FCL*: null, (CU(FCL-(ADVP*)): null, (CU(FCL-(ICL(VP*): null, (CU(ICL(ADVP*): null,
+    (CU(ICL(VP*): null, (CU(ICL(VP*)): null, (CU(NP(ADJP*: null, (CU(NP(ADJP*): null,
+    (CU(NP(ADVP*: null, (CU(NP*: null, (CU(NP*): null, (CU(PP*: null, (CU(PP-*): null,
+    (CU(X(ADVP*: null, (CU(X(ADVP*): null, (CU(X(NP*): null, (CU(X(PP*: null, (CU(X(VP*: null,
+    (CU(X(VP*): null, (CU(X(VP*)): null, (CU(X(VP-*): null, (CU(X*: null, (CU(X*): null,
+    (CU*: null, (CU-(ICL(VP*): null, (CU-(NP*: null, (FCL(ACL(ADVP*): null, (FCL(ACL*: null,
+    (FCL(ADJP*: null, (FCL(ADJP*): null, (FCL(ADVP(NP*: null, (FCL(ADVP*: null, (FCL(ADVP*): null,
+    (FCL(ADVP*))): null, (FCL(ADVP*))))): null, (FCL(CU(ADVP*: null, (FCL(CU(ADVP*): null,
+    (FCL(CU(FCL(NP*: null, (FCL(CU(FCL(NP*): null, (FCL(CU(FCL(VP*): null, (FCL(CU(ICL(VP*): null,
+    (FCL(CU(NP(CU(ADJP*): null, (FCL(CU(NP*: null, (FCL(CU(NP*): null, (FCL(CU(PP*: null,
+    (FCL(CU(X(VP*: null, (FCL(CU(X(VP*)): null, (FCL(CU*: null, (FCL(CU-(FCL(NP*: null,
+    (FCL(FCL(ADVP*: null, (FCL(FCL(ADVP*): null, (FCL(FCL(FCL*: null, (FCL(FCL(ICL(VP*): null,
+    (FCL(FCL(NP*: null, (FCL(FCL(NP*): null, (FCL(FCL(PP*: null, (FCL(FCL(PP-*): null,
+    (FCL(FCL(VP*: null, (FCL(FCL(VP*): null, (FCL(FCL(VP-*): null, (FCL(FCL*: null,
+    (FCL(FCL-(NP*: null, (FCL(FCL-(PP*: null, (FCL(ICL(ADVP*): null, (FCL(ICL(VP*): null,
+    (FCL(ICL*: null, (FCL(NP(ADJP*: null, (FCL(NP(CU(NP*: null, (FCL(NP(CU(NP*): null,
+    (FCL(NP(NP(ADJP*: null, (FCL(NP*: null, (FCL(NP*): null, (FCL(NP-(ICL-(VP-*: null,
+    (FCL(NP-(PP*: null, (FCL(NP-*: null, (FCL(PP*: null, (FCL(PP-*: null, (FCL(VP*: null,
+    (FCL(VP*): null, (FCL(VP*)): null, (FCL(VP*))): null, (FCL(VP-*: null, (FCL(VP-*): null,
+    (FCL*: null, (FCL*))): null, (FCL-(ADVP*): null, (FCL-(NP*): null, (FCL-*): null,
+    (ICL(ADVP*): null, (ICL(ADVP*)))): null, (ICL(ADVP-*): null, (ICL(CU(X(VP*): null,
+    (ICL(CU(X(VP*)): null, (ICL(ICL(VP*): null, (ICL(NP*: null, (ICL(NP*): null, (ICL(PP*: null,
+    (ICL(VP*: null, (ICL(VP*): null, (ICL(VP*)): null, (ICL(VP*))): null, (ICL(VP*)))): null,
+    (ICL(VP*))))): null, (ICL(VP*)))))): null, (ICL(VP*))))))): null, (ICL(VP*)))))))): null,
+    (ICL(VP*)))))))))): null, (ICL(VP-*): null, (ICL*: null, (ICL*)))): null, (ICL-(VP*): null,
+    (NP(ADJP*: null, (NP(ADJP*): null, (NP(CU(ADJP*): null, (NP(CU(NP*: null, (NP(CU(NP*): null,
+    (NP(NP(ADJP*: null, (NP(NP*: null, (NP(NP-(ADJP-*)): null, (NP(PP*: null, (NP(PP*): null,
+    (NP*: null, (NP*): null, (NP*)): null, (NP*))): null, (NP*)))): null, (NP*))))): null,
+    (NP*)))))): null, (NP*))))))): null, (NP*)))))))): null, (NP*))))))))): null,
+    (NP*)))))))))): null, (NP*))))))))))): null, (NP*)))))))))))): null, (NP*))))))))))))): null,
+    (NP*)))))))))))))): null, (NP*))))))))))))))): null, (NP*)))))))))))))))): null,
+    (NP-(PP-(ICL-(VP-*: null, (NP-*: null, (NP-*): null, (PP(ADVP*: null, (PP(PP*): null,
+    (PP*: null, (PP*): null, (PP*)): null, (PP-*: null, (PP-*): null, (SQ(NP*: null,
+    (SQ(NP*): null, (VP*: null, (VP*): null, (VP*)): null, (VP*))): null, (VP*)))): null,
+    (VP*))))): null, (VP*)))))): null, (VP*))))))): null, (VP*)))))))): null, (VP*))))))))): null,
+    (VP*))))))))))): null, (VP-*: null, (VP-*): null, (X(ADVP*): null, (X(CU(X*: null,
+    (X(FCL*: null, (X(ICL(ADVP*): null, (X(NP*: null, (X(NP*): null, (X(PP*: null,
+    (X(PP*): null, (X(VP*: null, (X(VP*): null, (X(VP*)): null, (X(VP*))): null, (X(VP*)))): null,
+    (X(VP*)))))))): null, (X(VP-*): null, (X*: null, (X*)): null, (X*))): null, '*': null,
+    '*)': null, '*))': null, '*)))': null, '*))))': null, '*)))))': null, '*))))))': null,
+    '*)))))))': null, '*))))))))': null, '*)))))))))': null, '*))))))))))': null,
+    '*)))))))))))': null, '*))))))))))))': null, '*)))))))))))))': null, '*))))))))))))))': null,
+    '*)))))))))))))))': null, '*))))))))))))))))': null, '*)))))))))))))))))': null,
+    '*)))))))))))))))))))))': null}
   type: choice
 DTREE:
   category: feature
@@ -4680,10 +4742,28 @@ LEMMA:
   type: str
 MORF:
   category: feature
-  domain: !!set {ADJ: null, ADV: null, ART: null, CONJ-C: null, CONJ-S: null, EC: null,
-    INTJ: null, N: null, N-ADJ: null, 'N:': null, NP: null, NUM: null, PP: null, PRON-DET: null,
-    PRON-INDP: null, PRON-PERS: null, PROP: null, PRP: null, PU: null, V-FIN: null,
-    V-GER: null, V-INF: null, V-PCP: null, VP: null, XX: null}
+  domain: !!set {'-': null, 1P: null, 1S: null, 3P: null, 3S: null, COND|1/3S: null,
+    COND|1S: null, COND|3P: null, COND|3S: null, FUT|1/3S|SUBJ: null, FUT|1P|IND: null,
+    FUT|1P|SUBJ: null, FUT|1S|IND: null, FUT|3P|IND: null, FUT|3P|SUBJ: null, FUT|3S|IND: null,
+    FUT|3S|SUBJ: null, F|1P|NOM/PIV: null, F|1S|ACC: null, F|1S|DAT: null, F|1S|NOM: null,
+    F|1S|PIV: null, F|3P|ACC: null, F|3P|NOM: null, F|3P|NOM/PIV: null, F|3S/P|ACC: null,
+    F|3S|ACC: null, F|3S|DAT: null, F|3S|NOM: null, F|3S|NOM/PIV: null, F|P: null,
+    F|S: null, IMPF|1/3S|IND: null, IMPF|1/3S|SUBJ: null, IMPF|1P|IND: null, IMPF|1P|SUBJ: null,
+    IMPF|1S|IND: null, IMPF|1S|SUBJ: null, IMPF|3P|IND: null, IMPF|3P|SUBJ: null,
+    IMPF|3S|IND: null, IMPF|3S|SUBJ: null, IMP|2S: null, IMP|3P: null, M/F|1P|ACC: null,
+    M/F|1P|DAT: null, M/F|1P|NOM: null, M/F|1P|NOM/PIV: null, M/F|1S|ACC: null, M/F|1S|DAT: null,
+    M/F|1S|NOM: null, M/F|1S|PIV: null, M/F|3P|ACC: null, M/F|3P|NOM: null, M/F|3S/P|ACC: null,
+    M/F|3S/P|DAT: null, M/F|3S/P|SUBJ: null, M/F|3S|ACC: null, M/F|3S|DAT: null, M/F|3S|NOM: null,
+    M/F|3S|NOM/PIV: null, M/F|P: null, M/F|S: null, M/F|S/P: null, MQP|1/3S|IND: null,
+    MQP|1S|IND: null, MQP|3P|IND: null, MQP|3S|IND: null, M|1P|ACC: null, M|1P|DAT: null,
+    M|1P|NOM: null, M|1S|ACC: null, M|1S|DAT: null, M|1S|NOM: null, M|1S|PIV: null,
+    M|3P|ACC: null, M|3P|DAT: null, M|3P|NOM: null, M|3P|NOM/PIV: null, M|3S/P|ACC: null,
+    M|3S|ACC: null, M|3S|DAT: null, M|3S|NOM: null, M|3S|NOM/PIV: null, M|3S|PIV: null,
+    M|P: null, M|R: null, M|S: null, M|S/P: null, N<ARG: null, N|M/F|S: null, N|S: null,
+    PR|1/3S|SUBJ: null, PR|1P|IND: null, PR|1P|SUBJ: null, PR|1S|IND: null, PR|1S|SUBJ: null,
+    PR|2S|SUBJ: null, PR|3P|IND: null, PR|3P|SUBJ: null, PR|3S: null, PR|3S|IND: null,
+    PR|3S|SUBJ: null, PS/MQP|3P|IND: null, PS|1/3S|IND: null, PS|1P|IND: null, PS|1S|IND: null,
+    PS|3P|IND: null, PS|3S|IND: null, PS|3S|SUBJ: null, S|S: null, V|PCP|F|S: null}
   type: choice
 P: {category: meta, type: int}
 PRED:
