--- a/datasets/schemas/gs.yaml
+++ b/datasets/schemas/gs.yaml
@@ -68,7 +68,7 @@ DTREE:
     61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80,
     81, 82, 83, 84, 85, 86, 88, 89, 91, 513]
   name: DTREE
-  type: str
+  type: text
 FORM:
   category: feature
   domain: ['!', $%, $/, '%', '''', (, ), ',', '-', --, ., '...', '0', '0,22', '0,23',
@@ -1986,7 +1986,7 @@ FORM:
       ltimo", "\xFAltimos", "\xFAnica", "\xFAnicas", "\xFAnico", "\xFAteis", "\xFA\
       til"]
   name: FORM
-  type: str
+  type: text
 FUNC:
   category: feature
   domain: ['>A', '>N', '>P', A<, A<ARG, ACC, ACC-PASS, ADVL, APP, AUX, AUX<, CJT,
@@ -2001,8 +2001,8 @@ GPOS:
     PRON-INDP, PRON-PERS, PROP, PRP, PU, V-FIN, V-GER, V-INF, V-PCP, VP, XX]
   name: GPOS
   type: choice
-ID: {category: feature, type: str}
-INDEX: {category: meta, type: str}
+ID: {category: feature, type: text}
+INDEX: {category: meta, type: text}
 LEMMA:
   category: feature
   domain: [$/, '%', '-', '0,22', '0,23', '0,24', '0,26', '0,34', '0,47', '0,59', '0,62',
@@ -3353,7 +3353,7 @@ LEMMA:
       ntimo", "\xF3bvio", "\xF3culos", "\xF3leo", "\xF3pera", "\xF3rbita", "\xF3rg\xE3\
       o", "\xF3ticas_Trevo", "\xF4nibus", "\xF4nus", "\xFAlcera", "\xFAltimo", "\xFA\
       nico", "\xFAtil"]
-  type: str
+  type: text
 MORF:
   category: feature
   domain: ['-', 1P, 1S, 3P, 3S, COND|1/3S, COND|1S, COND|3P, COND|3S, FUT|1/3S|SUBJ,
@@ -3372,7 +3372,7 @@ MORF:
     PR|3S, PR|3S|IND, PR|3S|SUBJ, PS/MQP|3P|IND, PS|1/3S|IND, PS|1P|IND, PS|1S|IND,
     PS|3P|IND, PS|3S|IND, PS|3S|SUBJ, S|S, V|PCP|F|S]
   type: choice
-P: {category: meta, type: str}
+P: {category: meta, type: text}
 PRED:
   category: feature
   domain: ['-', abafar, abalar, abandonar, abastecer, abolir, abordar, abranger, "abra\xE7\
@@ -3498,10 +3498,10 @@ PRED:
     variar, varrer, vasculhar, velar, vencer, vender, ver, verificar, vestir, vetar,
     viabilizar, viajar, vigiar, violar, violentar, vir, virar, visar, visitar, vislumbrar,
     visualizar, viver, voar, voltar, votar, zerar, zonear]
-  type: str
+  type: text
 PRED_MARKER: {category: feature, type: bool}
-P_S: {category: meta, type: str}
-S: {category: meta, type: str}
+P_S: {category: meta, type: text}
+S: {category: meta, type: text}
 T:
   category: target
   domain: ['*', A0, A1, A2, A3, A4, A5, AM-ADV, AM-CAU, AM-DIR, AM-DIS, AM-EXT, AM-LOC,
