--- a/lr1.00e-03_hs32x32x32_ctx-p1/test-eval.props
+++ b/lr1.00e-03_hs32x32x32_ctx-p1/test-eval.props
@@ -37,13 +37,13 @@ recomendar	(V*)
 -	(A1*
 -	*)
 -	*
--	(A2*
+-	(AM-PRD*
 -	*
 -	*)
 -	*
 
--	(A1*
 -	*
+-	(A1*
 -	*)
 ser	(V*)
 -	(A2*
@@ -70,12 +70,12 @@ ser	(V*)
 -	*
 
 -	*
--	*
--	*
+-	(A0*
+-	*)
 -	*
 levantar	(V*)
--	*
 -	(A1*
+-	*
 -	*)
 -	*
 -	*
@@ -107,8 +107,8 @@ levantar	(V*)
 -	*
 manter	(V*)
 -	(A0*
--	*)
 -	*
+-	*)
 -	(A3*
 -	*
 -	*
@@ -184,13 +184,13 @@ ser	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -200,13 +200,13 @@ ser	(V*)
 -	*
 -	*
 esclarecer	(V*)
--	(C-V*)
+-	(AM-ADV*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -230,8 +230,8 @@ entender	(V*)
 -	(A1*
 -	*
 -	*
--	*)
--	(A3*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -333,11 +333,11 @@ ter	(V*)
 -	*
 -	*
 -	*
--	(AM-ADV*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -345,8 +345,8 @@ dar	(V*)
 -	(A1*
 -	*
 -	*
+-	*
 -	*)
--	(AM-TMP*)
 -	*
 
 -	*
@@ -380,7 +380,7 @@ cobrar	(V*)
 -	(AM-TMP*)
 -	*
 
--	(A1*
+-	(A2*
 -	*)
 ser	(V*)
 -	(A2*
@@ -445,16 +445,16 @@ gostar	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
--	*)
+-	*
+-	*
 -	*
 -	(A0*)
 defender	(V*)
--	(A1*)
--	(A2*
--	*
--	*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -482,9 +482,9 @@ falar	(V*)
 -	*
 -	*)
 -	*
+-	(A1*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -546,8 +546,8 @@ mostrar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
--	(AM-NEG*)
+-	(AM-NEG*
+-	*)
 ter	(V*)
 -	(A1*
 -	*)
@@ -560,8 +560,8 @@ ser	(V*)
 -	(A2*
 -	*)
 -	*
--	(C-A2*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -626,13 +626,13 @@ propiciar	(V*)
 -	*
 -	*
 -	(A1*)
--	(V*)
+-	(AM-DIS*)
 -	*
-participar	(C-V*
+participar	(AM-MNR*
 -	*
 -	*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -699,10 +699,10 @@ ser	(V*)
 -	*
 -	*
 -	*)
--	(AM-ADV*
--	*)
+-	(AM-ADV*)
+-	*
 discutir	(V*)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -767,13 +767,13 @@ atender	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -782,8 +782,6 @@ atender	(V*)
 -	*
 -	*
 
--	(A1*
--	*)
 -	*
 -	*
 -	*
@@ -792,17 +790,19 @@ atender	(V*)
 -	*
 -	*
 -	*
--	(A1*
--	*
--	*)
--	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -819,9 +819,9 @@ passar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
--	(A0*
+-	*
+-	*
 -	*)
 dizer	(V*)
 -	(A1*
@@ -846,7 +846,7 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*
+-	(AM-NEG*)
 -	(A1*
 -	*)
 ser	(V*)
@@ -947,16 +947,16 @@ reforçar	(V*)
 -	(AM-NEG*)
 adiantar	(V*)
 -	(A1*
--	*)
--	(A3*
+-	*
+-	*
 -	*
 -	*)
 -	*
 
--	(AM-MNR*)
+-	(AM-LOC*)
 -	*
--	(A1*
--	*)
+-	*
+-	(A1*)
 -	*
 indiciar	(V*)
 -	(AM-MNR*
@@ -968,8 +968,8 @@ indiciar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1008,7 +1008,7 @@ saber	(V*)
 indiciar	(V*)
 -	(A2*)
 -	*
--	*
+-	(AM-DIS*)
 -	*
 
 ser	(V*)
@@ -1054,11 +1054,11 @@ contratar	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1079,30 +1079,30 @@ acontecer	(V*)
 -	(AM-LOC*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(AM-MNR*
 -	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	(AM-MNR*
 -	*
 -	*
 -	*
 -	*)
--	*
 -	*
 
+-	*
+-	*
 -	(A2*
--	*
--	*
 -	*)
 -	(V*)
-ser	(A2*
--	*
+ser	(C-V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -1116,8 +1116,8 @@ ser	(A2*
 -	*
 -	*
 -	*
--	*)
--	(C-A1*
+-	*
+-	*
 -	*
 -	*)
 cair	(V*)
@@ -1127,11 +1127,11 @@ cair	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*)
 -	*
--	(A1*
+-	(A0*
 -	*)
 registrar	(V*)
 -	(A1*)
@@ -1142,17 +1142,17 @@ registrar	(V*)
 -	*
 -	*
 ser	*
--	*
--	*
--	*
--	*
 -	(A1*
 -	*
--	*)
 -	*
 -	*
 -	*
--	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1207,13 +1207,13 @@ vender	(V*)
 equilibrar	(V*)
 -	(A1*
 -	*)
--	(AM-MNR*
 -	*
 -	*
 -	*
+-	(C-A3*
 -	*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -1285,9 +1285,9 @@ pedir	(V*)
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -1329,12 +1329,12 @@ estabelecer	(V*)
 -	*
 -	*)
 -	*
--	(A1*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -1371,7 +1371,7 @@ estabelecer	(V*)
 -	*
 -	*
 -	*
--	(A1*)
+-	(A0*)
 -	(V*)
 -	*
 levar	(V*)
@@ -1445,8 +1445,8 @@ explicar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1467,14 +1467,14 @@ calcular	(V*)
 -	*
 -	*)
 -	*
--	(A3*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	(AM-EXT*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1484,13 +1484,13 @@ calcular	(V*)
 -	(A0*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	(A0*
--	*
--	*)
--	*
+-	(AM-NEG*)
 ter	(V*)
 -	(A1*
 -	*
@@ -1505,16 +1505,16 @@ ter	(V*)
 -	(V*)
 -	(A0*)
 utilizar	(V*)
--	(A2*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*)
+-	(AM-MNR*
 -	*
--	(AM-TMP*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -1590,11 +1590,11 @@ estimar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*)
 -	(AM-TMP*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1616,8 +1616,8 @@ classificar	(V*)
 -	*)
 -	(AM-MNR*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1671,14 +1671,14 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(A1*
--	*)
+-	*
+-	*
 -	(AM-NEG*)
 participar	(V*)
--	(A2*
+-	(A1*
+-	*
 -	*
 -	*)
--	*
 -	*
 -	*
 -	*
@@ -1701,26 +1701,26 @@ participar	(V*)
 -	*
 -	*
 -	*
--	(AM-CAU*
--	*
--	*
--	*)
--	(A1*)
--	(AM-TMP*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 ser	(V*)
 -	(A2*)
 -	*
--	(A2*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 
@@ -1734,36 +1734,36 @@ ser	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	(C-A0*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*)
--	(A0*
--	*
--	*
--	*
--	*)
--	*
--	*
--	*
--	*
--	*
--	(A0*)
 -	*
 -	(A0*)
 visitar	(V*)
 -	(A1*
 -	*
--	*)
--	(AM-PRD*
+-	*
+-	*
 -	*
 -	*)
 -	*
@@ -1805,9 +1805,9 @@ estar	(V*)
 
 -	(A0*
 -	*
+-	*
+-	*
 -	*)
--	(AM-DIS*)
--	(A0*)
 apresentar	(V*)
 -	(A1*
 -	*
@@ -1823,8 +1823,8 @@ apresentar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1862,9 +1862,9 @@ copiar	(V*)
 -	*
 produzir	(V*)
 -	(A1*
--	*)
 -	*
--	(A1*
+-	*
+-	*
 -	*)
 -	*
 -	*
@@ -1888,25 +1888,20 @@ produzir	(V*)
 -	*)
 -	*
 realizar	(V*)
--	(AM-TMP*
--	*
--	*
--	*
+-	(AM-TMP*)
+-	(AM-PNC*
 -	*)
+-	*
+-	*
 -	*
 
 assistir	(V*)
 -	(AM-TMP*)
--	(A2*
--	*
--	*)
--	*
--	(AM-ADV*
--	*
+-	(A1*
 -	*
 -	*
 -	*)
--	(A2*
+-	(A0*
 -	*
 -	*
 -	*
@@ -1916,6 +1911,11 @@ assistir	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*)
+-	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1952,8 +1952,8 @@ ver	(V*)
 -	*
 
 estar	(V*)
--	(A2*
--	*
+-	(A1*)
+-	(AM-LOC*
 -	*
 -	*
 -	*)
@@ -1980,7 +1980,7 @@ usar	(V*)
 -	*
 
 nascer	(V*)
--	(AM-LOC*
+-	(A2*
 -	*)
 -	*
 
@@ -1991,7 +1991,7 @@ nascer	(V*)
 -	*
 -	*
 fazer	(V*)
--	(A2*)
+-	(AM-LOC*)
 -	*
 
 -	(A0*)
@@ -2015,8 +2015,6 @@ anunciar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(C-A1*
 -	*
 -	*
 -	*
@@ -2026,8 +2024,10 @@ anunciar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2055,7 +2055,7 @@ anunciar	(V*)
 -	*)
 -	*
 abrir	(V*)
--	(AM-MNR*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -2104,14 +2104,14 @@ abrir	(V*)
 -	*
 -	*
 -	*
--	(A1*
+-	(A0*
 -	*)
 mudar	(V*)
--	(A3*
--	*
--	*
+-	(A2*
 -	*)
 -	(AM-PNC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2214,17 +2214,17 @@ pedir	(V*)
 -	*)
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*)
 afastar	(V*)
@@ -2311,7 +2311,7 @@ preparar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 -	*
 -	*
 acompanhar	(V*)
@@ -2364,10 +2364,10 @@ prometer	(V*)
 haver	(V*)
 -	(A1*
 -	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2377,7 +2377,7 @@ haver	(V*)
 -	*
 -	*
 -	*
--	(A2*)
+-	(A1*)
 -	*
 -	*
 construir	(V*)
@@ -2395,7 +2395,7 @@ construir	(V*)
 -	*
 -	*)
 ser	(V*)
--	(A2*
+-	(A3*
 -	*
 -	*
 -	*
@@ -2403,8 +2403,8 @@ ser	(V*)
 -	*
 
 -	*
--	(A1*
--	*)
+-	*
+-	(A1*)
 ser	(V*)
 -	(A2*
 -	*
@@ -2425,7 +2425,7 @@ promover	(V*)
 -	*)
 haver	(V*)
 -	(A1*)
--	(AM-TMP*
+-	(C-A1*
 -	*)
 -	*
 -	*
@@ -2448,19 +2448,19 @@ haver	(V*)
 -	*
 -	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*)
 ser	(V*)
@@ -2530,7 +2530,7 @@ declarar	(V*)
 -	*
 -	*)
 ser	(V*)
--	(A2*)
+-	(AM-DIS*)
 -	*
 -	*
 -	*
@@ -2605,17 +2605,17 @@ apreender	(V*)
 -	(A0*)
 desviar	(AM-NEG*)
 -	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*)
 -	*
 
--	(A1*
--	*)
+-	*
+-	(A1*)
 -	*
 devolver	(V*)
--	(A4*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -2627,8 +2627,8 @@ devolver	(V*)
 -	*
 -	*)
 -	*
--	(AM-MNR*)
--	*
+-	(AM-TMP*
+-	*)
 -	*
 -	*
 -	*
@@ -2637,9 +2637,9 @@ devolver	(V*)
 construir	(V*)
 -	(A1*
 -	*)
+-	(C-A1*
+-	*)
 -	(A2*
--	*
--	*
 -	*
 -	*
 -	*)
@@ -2650,14 +2650,14 @@ construir	(V*)
 -	*
 -	*
 
--	(AM-ADV*
+-	(AM-DIS*
 -	*)
 -	*
--	(AM-ADV*
--	*)
+-	*
+-	*
+-	*
 -	*
 -	(A1*
--	*
 -	*
 -	*
 -	*)
@@ -2697,7 +2697,7 @@ ser	(V*)
 -	*
 -	*
 -	*
--	(A1*
+-	(A0*
 -	*)
 planejar	(V*)
 -	*
@@ -2714,11 +2714,11 @@ criticar	(V*)
 -	(A1*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*)
--	(A2*
--	*
--	*
--	*
+-	(AM-PNC*
 -	*
 -	*
 -	*
@@ -2772,7 +2772,7 @@ pedir	(V*)
 -	*
 -	(A0*)
 jogar	(V*)
--	(A2*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -2836,9 +2836,9 @@ afirmar	(V*)
 -	*)
 estar	(V*)
 -	*
+-	(AM-MNR*
 -	*
 -	*
--	(A0*
 -	*)
 -	*
 -	*
@@ -2884,14 +2884,14 @@ estar	(V*)
 ser	(V*)
 -	(A2*)
 -	*
--	(AM-CAU*
--	*
+-	(AM-ADV*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	*
 -	*
 
 -	*
@@ -2997,25 +2997,25 @@ pedir	(V*)
 -	*
 negociar	(V*)
 -	(A1*
--	*)
--	(A2*
 -	*
--	*)
--	(A1*
--	*)
--	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
+-	*)
+-	*
+-	*
+-	(C-A2*
 -	*
 -	*
 -	*
+-	*)
 -	*
 
 -	*
@@ -3041,16 +3041,16 @@ negociar	(V*)
 -	*
 -	*
 -	*
--	(AM-LOC*
 -	*
--	*
--	*
+-	(AM-TMP*
 -	*
 -	*)
+-	(A0*
+-	*)
 formar	(V*)
+-	(A1*
+-	*)
 -	(A2*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3124,7 +3124,7 @@ temer	(V*)
 -	*)
 -	*
 
--	(A0*)
+-	*
 -	*
 -	*
 -	*
@@ -3163,16 +3163,16 @@ suspender	(V*)
 -	*
 -	*
 -	*
--	(A1*
+-	(A0*
 -	*)
 pôr	(V*)
 -	(A2*
 -	*
 -	*
--	*
--	*
 -	*)
 -	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3204,11 +3204,11 @@ pôr	(V*)
 -	*
 -	(A1*
 -	*)
--	*
+-	(AM-NEG*)
 aceitar	(V*)
 -	*
 
--	(A0*)
+-	(AM-LOC*)
 -	*
 achar	(V*)
 -	(A1*
@@ -3238,13 +3238,13 @@ usar	(V*)
 
 -	(A0*)
 funcionar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*)
 -	*
 
--	*
--	(A0*)
+-	(A0*
+-	*)
 bater	(V*)
 -	(AM-LOC*
 -	*)
@@ -3264,13 +3264,13 @@ bater	(V*)
 -	*
 -	*
 -	*
--	(A1*
--	*)
+-	*
+-	(A1*)
 vir	(V*)
 -	(A1*)
 -	*
 -	*
--	(AM-MNR*)
+-	*
 -	*
 
 -	*
@@ -3318,25 +3318,25 @@ haver	(V*)
 -	(A1*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(A0*
 -	*
 -	*
 -	*)
@@ -3392,8 +3392,8 @@ realizar	(V*)
 -	*)
 -	*
 
--	(A1*
--	*)
+-	*
+-	*
 -	*
 -	(A1*
 -	*)
@@ -3402,19 +3402,19 @@ ser	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -3435,9 +3435,9 @@ ser	(V*)
 -	*
 -	*
 -	*
--	(A1*)
+-	(A1*
 -	*
--	(AM-NEG*)
+-	*)
 ser	(V*)
 -	(A2*)
 -	*
@@ -3476,12 +3476,12 @@ movimentar	(V*)
 
 -	(A2*
 -	*
--	*
 -	*)
 -	(A1*
+-	*
 -	*)
 haver	(V*)
--	(A2*)
+-	(A1*)
 -	*
 -	*
 -	*
@@ -3608,10 +3608,10 @@ ser	(V*)
 -	*
 -	*
 elogiar	(V*)
--	*
--	*
--	*
 -	(A1*
+-	*
+-	*
+-	*
 -	*)
 -	*
 
@@ -3644,19 +3644,19 @@ negar	(V*)
 -	*
 -	*
 -	*
--	(AM-TMP*)
 -	(A1*
+-	*
 -	*)
 -	*
 -	*
 discutir	(V*)
--	(A3*
--	*
--	*
--	*
--	*
--	*)
 -	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3671,18 +3671,18 @@ discutir	(V*)
 -	*)
 -	*
 levantar	(V*)
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*)
 -	(A0*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3698,8 +3698,8 @@ negar	(C-V*)
 -	*
 -	*)
 -	*
--	(A0*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3725,14 +3725,14 @@ negar	(C-V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 -	*
 -	*
 terminar	(V*)
+-	(A1*
+-	*
+-	*)
 -	(AM-MNR*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3768,7 +3768,7 @@ especificar	(V*)
 -	(A1*)
 -	*
 
--	(A0*)
+-	*
 -	*
 anunciar	(V*)
 -	(AM-TMP*)
@@ -3790,9 +3790,9 @@ anunciar	(V*)
 dar	(V*)
 -	(A2*
 -	*
+-	*
 -	*)
 -	(A1*
--	*
 -	*
 -	*
 -	*
@@ -3834,12 +3834,12 @@ impedir	(V*)
 -	(A1*
 -	*
 -	*
--	*)
--	(AM-LOC*
 -	*
 -	*
--	*)
--	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3870,8 +3870,8 @@ impedir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*)
 -	*
 achar	(V*)
 -	(A1*
@@ -3934,7 +3934,7 @@ expor	(V*)
 -	*
 -	*
 -	*)
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*
 -	*)
@@ -3974,21 +3974,21 @@ retratar	(V*)
 -	*)
 -	*
 -	*
--	*
--	*
--	(A1*)
--	*
--	(AM-PRD*)
--	*
--	(AM-PRD*
+-	(A1*
 -	*
 -	*)
 -	*
--	(A0*
+-	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*)
-retratar	(AM-ADV*)
--	(V*)
+retratar	(V*)
+-	(AM-ADV*)
 -	(A1*
 -	*
 -	*
@@ -4021,10 +4021,10 @@ retratar	(AM-ADV*)
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
--	(A0*
+-	*
+-	*
 -	*)
 -	(AM-NEG*)
 ver	(V*)
@@ -4102,7 +4102,7 @@ unir	(V*)
 
 -	(A1*)
 ocorrer	(V*)
--	(C-V*)
+-	(A1*)
 -	(AM-TMP*
 -	*
 -	*)
@@ -4122,11 +4122,11 @@ ocorrer	(V*)
 -	*
 -	*
 -	*
--	(A0*
+-	(A1*
 -	*)
 -	*
 chegar	(V*)
--	(A2*
+-	(A1*
 -	*)
 -	*
 
@@ -4134,13 +4134,13 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	(A1*)
+-	(A0*)
 seguir	(V*)
 -	(A2*
+-	*
 -	*)
 -	(AM-TMP*
 -	*
--	*
 -	*)
 -	*
 -	*
@@ -4150,9 +4150,9 @@ seguir	(V*)
 -	*
 -	*
 
--	(A0*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	(A0*
 -	*)
@@ -4197,9 +4197,9 @@ ser	(V*)
 -	*
 -	*
 -	*
--	(A2*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4229,7 +4229,7 @@ ser	(V*)
 -	*
 -	(A0*)
 ir	(V*)
--	(A2*
+-	(A4*
 -	*
 -	*)
 -	*
@@ -4258,15 +4258,15 @@ acreditar	(V*)
 -	*)
 -	*
 
--	(A1*
+-	(A0*
 -	*)
 -	*
 aumentar	(V*)
 -	*
 -	(AM-MNR*
 -	*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -4274,8 +4274,6 @@ aumentar	(V*)
 -	*)
 -	*
 
--	(A1*
--	*)
 -	(A0*
 -	*
 -	*
@@ -4284,12 +4282,14 @@ aumentar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
-cair	(A2*)
--	(V*)
+cair	(V*)
 -	(C-V*
 -	*)
--	(A3*
+-	(AM-MNR*
+-	*
 -	*
 -	*
 -	*
@@ -4305,8 +4305,8 @@ cair	(A2*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	(A0*)
 -	*
 -	(V*)
 restringir	(C-V*)
@@ -4320,8 +4320,8 @@ restringir	(C-V*)
 
 -	(A1*)
 ficar	(V*)
--	(A2*
--	*
+-	(A2*)
+-	(C-A2*
 -	*
 -	*
 -	*
@@ -4352,22 +4352,22 @@ ficar	(V*)
 -	*
 -	*
 -	(AM-NEG*)
--	*
+-	(A0*)
 responder	(V*)
 -	*
 
 -	(A1*)
 -	*
 receber	(V*)
--	(AM-MNR*
+-	(A2*
 -	*)
 
 -	(A0*)
 -	(AM-TMP*
+-	*
+-	*
 -	*)
 -	(A0*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4390,10 +4390,11 @@ conturbar	(V*)
 -	*
 -	*)
 arremessar	(V*)
--	(AM-PNC*
+-	(A2*
 -	*)
 -	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*)
@@ -4402,19 +4403,18 @@ arremessar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*)
 -	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*)
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	(AM-DIS*
 -	*
 -	*)
@@ -4473,8 +4473,8 @@ reagir	(V*)
 -	*
 -	*
 -	*
--	(AM-ADV*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4534,7 +4534,7 @@ adorar	(V*)
 -	*
 -	*
 ser	(V*)
--	(A2*)
+-	(A1*)
 -	*
 
 ter	(V*)
@@ -4555,8 +4555,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	(A1*
--	*)
+-	*
+-	(AM-NEG*)
 -	*
 concorrer	(V*)
 -	(A2*
@@ -4608,15 +4608,13 @@ adorar	(V*)
 -	*
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 confessar	(V*)
--	(A0*)
--	*
--	(AM-TMP*)
+-	(A0*
 -	*
 -	*
 -	*
@@ -4632,6 +4630,8 @@ confessar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*)
 -	*
 
 -	(A0*)
@@ -4639,10 +4639,10 @@ dizer	(V*)
 -	(A1*
 -	*
 -	*
--	*
 -	*)
-
 -	*
+
+-	(A0*)
 -	*
 -	*
 começar	(V*)
@@ -4654,18 +4654,18 @@ começar	(V*)
 -	*
 -	*
 ser	(V*)
--	(A2*
+-	(A1*
 -	*)
 -	*
--	*
+-	(AM-MNR*)
 
 -	(A1*
 -	*)
--	(V*)
-funcionar	(C-V*)
--	(A2*
--	*)
+-	*
+funcionar	(V*)
+-	(A2*)
 -	(AM-TMP*
+-	*
 -	*
 -	*
 -	*)
@@ -4675,16 +4675,16 @@ funcionar	(C-V*)
 -	*
 -	*)
 ser	(V*)
+-	(AM-DIS*
 -	*
--	*
--	*
--	*
--	*
--	(AM-TMP*
 -	*
 -	*
 -	*)
 -	(A2*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
 
@@ -4709,8 +4709,8 @@ circular	(V*)
 funcionar	(V*)
 -	(A2*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*)
 -	*
@@ -4722,8 +4722,8 @@ funcionar	(V*)
 -	(A0*
 -	*
 -	*
--	*
 -	*)
+-	(AM-DIS*)
 -	(AM-NEG*)
 -	*
 contar	(V*)
@@ -4731,9 +4731,9 @@ contar	(V*)
 -	*
 -	*
 -	*
+-	*
 -	*)
 -	(AM-TMP*
--	*
 -	*
 -	*
 -	*)
@@ -4756,8 +4756,8 @@ retornar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	(AM-ADV*)
 -	*
 recuperar	(V*)
 -	(A1*
@@ -4776,8 +4776,8 @@ recuperar	(V*)
 -	*)
 -	*
 
--	*
--	*
+-	(AM-LOC*
+-	*)
 -	*
 -	*
 -	*
@@ -4805,7 +4805,7 @@ visitar	(V*)
 -	(A1*
 -	*)
 viver	(V*)
--	(A2*
+-	(AM-PNC*
 -	*
 -	*
 -	*
@@ -4848,7 +4848,7 @@ assumir	(V*)
 -	*)
 -	(V*)
 despedir	(C-V*)
--	(A2*
+-	(A3*
 -	*
 -	*)
 -	*
@@ -4877,10 +4877,10 @@ despedir	(C-V*)
 ceder	(V*)
 -	(A1*
 -	*)
--	(A2*
--	*)
+-	(AM-MNR*
 -	*
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -4944,21 +4944,21 @@ implementar	(V*)
 -	*
 -	*)
 -	*
--	(AM-TMP*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*)
+-	*
 -	(AM-MNR*
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
 -	*
 
 -	(A1*
@@ -4978,8 +4978,8 @@ implementar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 -	*
 dizer	(V*)
 -	(A0*
@@ -5003,9 +5003,9 @@ estar	(V*)
 ser	(V*)
 -	(A2*
 -	*
--	*
 -	*)
 -	(AM-LOC*
+-	*
 -	*
 -	*
 -	*
@@ -5099,15 +5099,15 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(AM-ADV*
 -	*
 -	*
 -	*
 -	*
--	*)
 -	*
 -	*
--	(A1*)
+-	*
+-	*
+-	*
 -	(V*)
 impetrar	(A1*
 -	*
@@ -5130,15 +5130,15 @@ impetrar	(A1*
 -	*
 -	*)
 informar	(V*)
--	(AM-EXT*)
+-	(AM-ADV*)
 -	(A1*
 -	*
 -	*
 -	*
 -	*
--	*
 -	*)
--	(C-A1*
+-	(A2*
+-	*
 -	*
 -	*)
 -	*
@@ -5150,11 +5150,11 @@ informar	(V*)
 -	*
 -	*
 -	(AM-ADV*)
--	(AM-NEG*)
 -	*
-manter	(V*)
--	(AM-CAU*
 -	*
+manter	(AM-MNR*
+-	*)
+-	(C-AM-MNR*
 -	*
 -	*
 -	*)
@@ -5191,8 +5191,8 @@ piorar	(V*)
 -	(A0*)
 arranjar	(V*)
 -	(A1*
--	*)
 -	*
+-	*)
 -	(AM-TMP*
 -	*
 -	*
@@ -5208,7 +5208,7 @@ deixar	(V*)
 -	(A1*
 -	*)
 -	*
--	(AM-DIS*)
+-	*
 -	*
 -	*
 -	*
@@ -5216,13 +5216,13 @@ deixar	(V*)
 -	*
 
 -	*
--	(AM-TMP*
--	*)
+-	*
+-	*
 -	(A1*
 -	*)
 -	*
-pegar	(A2*)
--	(V*)
+pegar	(V*
+-	*)
 -	(A2*
 -	*
 -	*
@@ -5238,8 +5238,8 @@ pegar	(A2*)
 -	*
 -	*
 fazer	(V*)
--	(A2*
--	*
+-	(AM-MNR*)
+-	(C-AM-MNR*
 -	*
 -	*
 -	*)
@@ -5354,9 +5354,9 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(A1*)
+-	*
 ser	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -5373,8 +5373,8 @@ ser	(V*)
 -	*
 -	*
 ganhar	(V*)
--	(A2*)
 -	(A1*
+-	*
 -	*
 -	*)
 -	*
@@ -5386,29 +5386,29 @@ ganhar	(V*)
 -	*
 -	*)
 -	*
--	(A1*
+-	(A0*
 -	*)
 demitir	(V*)
 -	(AM-TMP*
 -	*)
 -	*
 
--	(AM-TMP*
 -	*
--	*)
 -	*
--	(A0*)
+-	*
+-	*
+-	(AM-ADV*)
 -	*
 conhecer	(V*)
 -	(A1*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	*)
--	(A2*
--	*
--	*
--	*
+-	(AM-PNC*
 -	*
 -	*
 -	*
@@ -5417,17 +5417,17 @@ conhecer	(V*)
 -	*)
 -	*
 
--	(AM-LOC*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	(A0*
--	*
--	*
--	*
 -	*
 -	*
 -	*)
@@ -5452,16 +5452,16 @@ revelar	(V*)
 -	*
 -	*
 -	*
+-	*)
+-	(AM-ADV*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -5478,10 +5478,10 @@ revelar	(V*)
 -	*
 -	*
 -	*
-iludir	*
+iludir	(V*)
+-	(A1*
 -	*
 -	*
--	(AM-MNR*
 -	*
 -	*
 -	*
@@ -5514,7 +5514,7 @@ iludir	*
 -	*
 -	*
 -	*
--	(A1*)
+-	*
 -	*
 -	(V*)
 tornar	(C-V*)
@@ -5557,24 +5557,24 @@ matar	(V*)
 -	*)
 -	*
 
--	(AM-PRD*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
 -	*)
 -	*
--	(A0*)
+-	(A1*)
 viver	(V*)
 -	(AM-TMP*
--	*
--	*
+-	*)
+-	(A1*
 -	*
 -	*)
 -	*
 
 -	*
--	(A0*)
+-	(AM-DIS*)
 perguntar	(V*)
 -	(A1*
 -	*
@@ -5595,7 +5595,7 @@ perguntar	(V*)
 -	*
 -	*
 ser	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -5606,8 +5606,8 @@ ser	(V*)
 -	(A0*)
 -	*
 dar	(V*)
--	(A2*
--	*
+-	(A1*)
+-	(AM-MNR*
 -	*)
 -	*
 -	*
@@ -5628,8 +5628,8 @@ dar	(V*)
 -	*
 -	*
 -	*
--	(A1*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -5646,8 +5646,8 @@ ser	(V*)
 -	*
 
 -	(A1*
--	*
 -	*)
+-	*
 -	(AM-NEG*)
 ser	(V*)
 -	(A2*
@@ -5690,19 +5690,19 @@ ser	(V*)
 -	*
 -	*
 -	*
--	(A1*)
--	(V*)
--	(A1*)
--	(AM-CAU*
-utilizar	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+utilizar	(V*)
+-	(AM-MNR*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -5752,7 +5752,7 @@ ter	(V*)
 
 -	(AM-LOC*)
 -	*
--	(A1*)
+-	(AM-DIS*)
 -	*
 ser	(V*)
 -	(A1*
@@ -5769,9 +5769,9 @@ ser	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
 -	*)
--	*
--	*
 -	*
 -	*
 
@@ -5781,21 +5781,21 @@ ser	(V*)
 surpreender	(V*)
 -	(A1*
 -	*)
--	(A4*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
 -	(AM-TMP*
+-	*)
+-	(AM-ADV*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -5830,15 +5830,15 @@ revelar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
--	(A1*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*)
 -	(AM-TMP*
--	*
 -	*
 -	*
 -	*
